--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "lint:check": "eslint \"**/*.{ts,tsx}\""
   },
-  
   "dependencies": {
     "@clerk/nextjs": "^4.23.0",
     "@clerk/themes": "^1.7.5",
