--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "lint:check": "eslint \"**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.0",
-    "@clerk/themes": "^1.7.5",
-    "@hookform/resolvers": "^3.1.1",
-    "@pinecone-database/pinecone": "^0.1.6",
-    "@prisma/client": "^5.0.0",
-    "@radix-ui/react-avatar": "^1.0.3",
+    "@clerk/nextjs": "^4.29.4",
+    "@clerk/themes": "^1.7.9",
+    "@hookform/resolvers": "^3.3.4",
+    "@pinecone-database/pinecone": "^1.1.3",
+    "@prisma/client": "^5.7.1",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -29,38 +29,37 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "@upstash/ratelimit": "^0.4.3",
-    "@upstash/redis": "^1.22.0",
-    "ai": "^2.1.3",
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.27.1",
+    "ai": "^2.2.30",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
-    "langchain": "^0.0.92",
+    "langchain": "^0.1.4",
     "lucide-react": "^0.263.0",
-    "next": "13.4.11",
-    "next-cloudinary": "^4.16.0",
+    "next": "14.0.4",
+    "next-cloudinary": "^5.16.0",
     "next-themes": "^0.2.1",
-    "openai": "^3.3.0",
+    "openai": "^4.24.1",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-form-stepper": "^2.0.3",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.49.2",
     "react-spinners": "^0.13.8",
-    "replicate": "^0.9.3",
-    "stripe": "^12.14.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
+    "replicate": "^0.18.1",
+    "stripe": "^14.10.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.9"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -71,7 +70,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prisma": "^5.7.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
